--- a/views/index.pug
+++ b/views/index.pug
@@ -21,4 +21,5 @@ block content
         h1.name= car.name
         h1.price= car.price
   script(src='./javascripts/main.js')
+  script(src='./javascripts/main2.js')
 
